fix overflow hide option button

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ background-position: 0 -70px;
 }*/
 .ds4 .arrows {
     position: absolute;
-    width: 352px;
+    width: 353px;
     height: 37px;
     top: 128px;
     left: 179px;
@@ -141,7 +141,7 @@ background-position: 0 -70px;
 .ds4 .start {
     float: right;
     /* width: 28px; */
-    background-position: 21px 0;
+    background-position: 19px 0;
 }
 
 .ds4 .abxy {
